fixed css for align movies on one line

--- a/movies-app-react/src/components/homepage/components/Movies/components/movieList/MovieList.css
+++ b/movies-app-react/src/components/homepage/components/Movies/components/movieList/MovieList.css
@@ -6,3 +6,6 @@
     color: #979797;
     margin-right: 0.2rem;
 }
+.movie_list_container {
+    display: flex;
+}
