--- a/movies-app-react/src/components/homepage/components/Movies/components/movieList/components/Movie.css
+++ b/movies-app-react/src/components/homepage/components/Movies/components/movieList/components/Movie.css
@@ -1,6 +1,6 @@
 .movie_section {
   position: relative;
-  display: inline-block;
+  display: inline;
   margin: 1.5rem;
 }
 
